# Text-To-SQL

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Dataset/: BuyerOrder.xlsx  metadata-BuyerOrder.xlsx  metadata-CurrentStock.xlsx
ExploreDataset/: 3_query_and_QA_sqldb.ipynb  preprocess_dataset.ipynb  query_and_QA_sqldb.ipynb  sql_to_check_dataset.ipynb  test_sql_db_connection.ipynb
ExploreDataset/test_model/: test_openai_model.ipynb
configs/: app_config.yml
src/: app.py  prepare_csv_xlxs_sqlitedb.py
src/utils/: chatbot.py  load_config.py  prepare_sqlitedb_from_csv_xlxs.py  ui_settings.py
